UV projection is dependant of the object position #65775

Closed
opened 2019-06-13 09:34:17 +02:00 by Thibaut Bourbon · 4 comments

System Information
Operating system: Windows 10, 7
Graphics card: 1080 Ti

Blender Version
Broken: 2.80, 2404220e80, blender2.7, 2019-06-12 18:00
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
As long as the object is located on (0,0,0) the Sphere, Cube and Cylindrical UV projection work fine, but as soon as one move around the object all hell breaks loose (see animated gif) .ezgif-5-a1829ad57579.gif

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Move to the UV workspace, you are then already in edit mode
Hit U >Sphere projection (or Cylinder or Cube projection, same issue) and visualize the result
Leave edit mode, hit G and move around the cube elsewhere
Go back to edit mode
U > Sphere projection again
Not the same unwrapping.

**System Information** Operating system: Windows 10, 7 Graphics card: 1080 Ti **Blender Version** Broken: 2.80, 2404220e80a9, blender2.7, 2019-06-12 18:00 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** As long as the object is located on (0,0,0) the Sphere, Cube and Cylindrical UV projection work fine, but as soon as one move around the object all hell breaks loose (see animated gif) .![ezgif-5-a1829ad57579.gif](https://archive.blender.org/developer/F7101341/ezgif-5-a1829ad57579.gif) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Move to the UV workspace, you are then already in edit mode Hit U >Sphere projection (or Cylinder or Cube projection, same issue) and visualize the result Leave edit mode, hit G and move around the cube elsewhere Go back to edit mode U > Sphere projection again Not the same unwrapping.

Added subscriber: @ThibautBourbon

Added subscriber: @ThibautBourbon
Sebastian Parborg self-assigned this 2019-06-19 14:45:15 +02:00

I've uploaded a possible solution: D5094

I've uploaded a possible solution: [D5094](https://archive.blender.org/developer/D5094)

This issue was referenced by ce57185ffb

This issue was referenced by ce57185ffb4bc3841d65e2902ef2388dc3d18cb6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65775
No description provided.